--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,19 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+/* =================================================================== */
+
+
+.QuestiionDetail {
+  box-shadow: 8px 8px 18px rgba(128, 128, 128, 0.5);
+}
+
+.QuestiionBox {
+  box-shadow: 8px 8px 18px rgba(128, 128, 128, 0.5);
 }
